# cdt

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  SUBMODULES.md  WHATS_NEW.md  docs.json  pipeline.jsonc
.cicd/: defaults.json
.github/workflows/: build.yaml  release.yaml
_tmp/: LLVM16_BOOTSTRAP.md
cdt-llvm-extensions/: LLVMPatch.txt  SetLLVMTargets.txt
docker/: dockerfile
docs/: index.md  roadmap.md
docs/02_installation/: index.md
docs/03_command-reference/: cdt-cc.md  cdt-cpp.md  cdt-ld.md
docs/04_upgrading/: eosio.cdt-to-cdt.md
docs/05_features/: 10_return_values_from_actions.md  30_binary-extension.md  40_native-tester-compilation.md  50_crypto-extensions.md  99_deferred_transactions.md
docs/06_how-to-guides/: 50_how-to-create-and-use-action-wrappers.md  60_how-to-return-values-from-actions.md
docs/07_best-practices/: 02_naming-conventions.md  03_resource-planning.md  04_data-design-and-migration.md  05_securing_your_contract.md  07_error_handling.md  11_debugging_a_smart_contract.md
docs/08_troubleshooting/: index.md
docs/09_tutorials/: 01_binary-extension.md  02_abi-variants.md  03_create-an-abi-file.md
docs/man/: cdt-abidiff.1  cdt-abidiff.1.md  cdt-cc.1  cdt-cc.1.md  cdt-cpp.1  cdt-cpp.1.md  cdt-ld.1  cdt-ld.1.md  cdt-objdump.1  cdt-objdump.1.md
examples/hello/: README.txt
examples/multi_index_example/: README.txt
examples/multi_index_large/: README.txt
examples/send_inline/: README.txt
examples/singleton_example/: README.txt
libraries/: CMakeLists.txt
libraries/boost/: CMakeLists.txt
libraries/core_netlib/: CMakeLists.txt  base64.cpp  core_netlib.cpp  crypto.cpp  malloc.cpp  memory.cpp
libraries/core_netlib/capi/core_net/: action.h  call.h  chain.h  crypto.h  crypto_bls_ext.h  crypto_ext.h  db.h  instant_finality.h  permission.h  print.h  privileged.h  system.h  transaction.h
libraries/core_netlib/capi/eosio/: action.h  call.h  crypto.h  crypto_ext.h  db.h  permission.h  system.h  transaction.h
libraries/core_netlib/contracts/core_net/: action.hpp  call.hpp  compat.hpp  contract.hpp  core_net.hpp  deferred_transaction.hpp  dispatcher.hpp  eosio.hpp  instant_finality.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  system.hpp  transaction.hpp
libraries/core_netlib/contracts/eosio/: call.hpp  contract.hpp  deferred_transaction.hpp  privileged.hpp  singleton.hpp  system.hpp
libraries/core_netlib/core/core_net/: binary_extension.hpp  bitset.hpp  check.hpp  context.hpp  crypto_bls_ext.hpp  crypto_ext.hpp  datastream.hpp  hash_id.hpp  ignore.hpp  key_utils.hpp  name.hpp  powers.hpp  print.hpp  symbol.hpp  varint.hpp
libraries/core_netlib/core/eosio/: asset.hpp  base64.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  hash_id.hpp  ignore.hpp  rope.hpp  symbol.hpp
libraries/eosiolib/: CMakeLists.txt  crypto.cpp  eosiolib.cpp  malloc.cpp  simple_malloc.cpp
libraries/eosiolib/capi/core_net/: action.h  call.h  chain.h  crypto.h  crypto_bls_ext.h  crypto_ext.h  db.h  instant_finality.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/eosiolib/capi/eosio/: chain.h  crypto_bls_ext.h  instant_finality.h  print.h  privileged.h  types.h
libraries/eosiolib/contracts/core_net/: action.hpp  call.hpp  compat.hpp  contract.hpp  core_net.hpp  deferred_transaction.hpp  detail.hpp  dispatcher.hpp  eosio.hpp  instant_finality.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  system.hpp  transaction.hpp
libraries/eosiolib/contracts/eosio/: action.hpp  deferred_transaction.hpp  detail.hpp  dispatcher.hpp  eosio.hpp  instant_finality.hpp  multi_index.hpp  permission.hpp  producer_schedule.hpp  system.hpp  transaction.hpp
libraries/eosiolib/core/core_net/: asset.hpp  base64.hpp  binary_extension.hpp  bitset.hpp  check.hpp  context.hpp  crypto.hpp  crypto_bls_ext.hpp  crypto_ext.hpp  datastream.hpp  fixed_bytes.hpp  hash_id.hpp  ignore.hpp  key_utils.hpp  name.hpp  powers.hpp  print.hpp  reflect.hpp  rope.hpp  serialize.hpp  string.hpp  symbol.hpp  time.hpp  varint.hpp
libraries/eosiolib/core/eosio/: binary_extension.hpp  bitset.hpp  context.hpp  crypto_bls_ext.hpp  crypto_ext.hpp  key_utils.hpp  name.hpp  powers.hpp  print.hpp  reflect.hpp  serialize.hpp  string.hpp  time.hpp  varint.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/patches/: __assertion_handler  __config_site  chrono.cpp  core_net.cpp  exception.cpp  iostream  new.cpp  verbose_abort.cpp
libraries/meta_refl/include/bluegrass/meta/: refl.hpp
libraries/native/: CMakeLists.txt  crt.cpp  elf_crt_aarch64.s  intrinsics.cpp  macho_crt_aarch64.s
libraries/native/native/core_net/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/eosio/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
modules/: CDTLibConfig.cmake.in  ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt
scripts/: generate_bottle.sh  generate_tarball.sh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  action_results_test.cpp  array_tests.cpp  bitset_tests.cpp  bls_tests.cpp  call_tests.cpp  capi_tests.cpp  codegen_tests.cpp  contracts.hpp.in  crypto_tests.cpp  get_code_hash_tests.cpp  instant_finality_tests.cpp  main.cpp  memory_tests.cpp  multi_index_tests.cpp  name_pk_tests.cpp  test_utils.hpp
tests/unit/: asset_tests.cpp  base64_tests.cpp  binary_extension_tests.cpp  crt_tests.cpp  crypto_ext_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  string_tests1.cpp  string_tests2.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tools/: CMakeLists.txt
tools/abidiff/: cdt-abidiff.cpp.in
tools/cc/: cdt-cc.cpp.in  cdt-cpp.cpp.in
tools/llvm-passes/CoreNetApply/: CMakeLists.txt
tools/llvm-passes/CoreNetSoftfloat/: CMakeLists.txt  CoreNetSoftfloat.cpp
(+154 files in other folders)
